--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,16 @@
+body{
+    padding:50px 0px 0px 0px;
+    z-index:0;
+}
+
+.navbar-dark {
+     background-color: #512DA8;
+}
+
+.navbar-inverse {
+     background-color: #512DA8;
+}
+
 .row-header {
 	margin: 0px auto;
 	padding: 0px auto;
@@ -28,3 +41,4 @@
 	margin: 0px;
 	color: #0f0f0f;
 }
+
