--- a/css/styles.css
+++ b/css/styles.css
@@ -66,3 +66,10 @@ body{
 .carousel-caption {
     top: 70px;
 }
+
+#carouselButton {
+    right:0px;
+    position: absolute;
+    bottom: 0px;
+    z-index: 1;
+}
